--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,12 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/ode_logo_16x16.png" sizes="16x16">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/ode_logo_32x32.png" sizes="32x32">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/ode_logo_64x64.png" sizes="64x64">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/ode_logo_128x128.png" sizes="128x128">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/ode_logo_180x180.png" sizes="180x180">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/ode_logo_192x192.png" sizes="192x192">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ocean Data Explorer</title>
   </head>
   <body>
     <noscript>
